<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trying to be Funny</string>
    <string name="do_you_want_to_save">Do you want to save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_bits">Add Bits</string>
    <string name="add_a_bit">Add a Bit</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_location">Add a location</string>
    <string name="or">Or</string>
    <string name="no_location_text">It was in an unmarked broom closet</string>
    <string name="save_set">Save Set</string>
    <string name="add_bit_button_description">A button that adds bits to the set for saving</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="saving_set_dialog_title">Discard set?</string>
    <string name="discard">Discard</string>
    <string name="dont_have_permissions_to_record_and_save_title">Permissions not granted</string>
    <string name="dont_have_permissions_to_record_and_save_body">
        This app requires recording and writing permissions to function.
        Please grant them to continue usage.
    </string>
    <string name="okay">Okay</string>

    <string name="whats_so_funny">What\'s so funny?</string>
    <string name="funny_how">Funny how? Funny like a clown?</string>
    <string name="whats_the_deal_with_airline_food">What\'s the deal with airline food?</string>
    <string name="i_dont_think_it_went_so_bad" tools:ignore="TypographyEllipsis">I don\'t think it went so bad...</string>
    <string name="maybe_that_hecklers_right" tools:ignore="TypographyEllipsis">Maybe that heckler\'s right...</string>
</resources>
