<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sound_recorder_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="32dp"
        />

    <Button
        android:id="@+id/replay_first_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="Replay random recording!"
    />

    <Button
        android:id="@+id/button_start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/button_pause_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/button_stop_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"/>
</RelativeLayout>
