<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/whats_funny_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_for_bits_in_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/add_bits_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_bits"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toTopOf="@+id/next_button_on_add_bits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/add_bit_button"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button_on_add_bits"
        app:layout_constraintStart_toEndOf="@+id/add_bits_input"
        app:srcCompat="@drawable/ic_add_black_24dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/add_bit_button_description" />

    <Button
        android:id="@+id/next_button_on_add_bits"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>